--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
 *.pyc
 *~
-/.vscode
+*.zip
+*.css.map
 __pycache__
 db.sqlite3
-/static
 .DS_Store
-*.zip
-/blog/migrations
-/pages/migrations
-/users/migrations
-/todo/migrations
-/shortener/migrations
-/khoBlogEnv
-/venv
 Pipfile
 Pipfile.lock
-khoBlog/settings_dev.py
+
+/.vscode
+/.idea
+/node_modules
+/static
+/khoBlogEnv
+/venv
+/.history
+migrations
+settings_dev.py
 pythonenv3.8/
 .history
-.idea
