--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.1.0",
     "jquery": "^3.5.1",
-    "bootstrap-icons": "^1.1.0"
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {},
   "scripts": {
