--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SECRET_KEY='very secrect key'
+DEBUG='A_BOOLEAN_VALUE'
+SITE_ID='NUMBER'
 AWS_ACCESS_KEY_ID='very much access key'
 AWS_SECRET_ACCESS_KEY='key'
 AWS_STORAGE_BUCKET_NAME='MLG name'
-DEBUG=A_BOOLEAN_VALUE
-SITE_ID=NUMBER
-ALLOWED_HOSTS=['CHANGE', 'THIS']
+ALLOWED_HOSTS='CHANGE', 'THIS'
