account email verification

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ AWS_ACCESS_KEY_ID='very much access key'
 AWS_SECRET_ACCESS_KEY='key'
 AWS_STORAGE_BUCKET_NAME='MLG name'
 ALLOWED_HOSTS=CHANGE,THIS.com
+EMAIL_HOST_USER='example@email.com'
+EMAIL_HOST_PASSWORD='password_for_example_email'
