--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 idna==2.10
+importlib-metadata==2.1.1
 Impostor==2.0.4
 inflection==0.5.1
 itypes==1.2.0
@@ -41,6 +42,7 @@ lxml==4.6.2
 Markdown==3.3.3
 markdown2==2.4.0
 MarkupSafe==1.1.1
+mysqlclient==2.0.3
 oauthlib==3.1.0
 packaging==20.9
 Pillow==8.1.1
@@ -62,6 +64,7 @@ readtime==1.1.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 Rx==1.6.1
 s3transfer==0.3.4
 singledispatch==3.4.0.3
@@ -73,3 +76,4 @@ toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.26.3
 virtualenv==20.4.2
+zipp==3.4.1
