--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-bootstrap-v5==1.0.0
 django-environ==0.4.5
 django-markdownx==3.0.1
 django-ranged-response==0.2.0
+django-robots==4.0
 django-simple-captcha==0.5.13
 django-storages==1.11.1
 djangorestframework==3.12.2
