--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-ranged-response==0.2.0
 django-robots==4.0
 django-simple-captcha==0.5.13
 django-storages==1.11.1
+django-taggit==1.4.0
 djangorestframework==3.12.2
 docutils==0.16
 drf-yasg==1.20.0
