--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-allauth==0.44.0
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap-v5==1.0.2
 django-environ==0.4.5
+django-jsonview==2.0.0
 django-markdownx==3.0.1
 django-ranged-response==0.2.0
 django-robots==4.0
