--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-markdownx==3.0.1
 django-ranged-response==0.2.0
 django-robots==4.0
 django-simple-captcha==0.5.14
+django-simple-history==3.0.0
 django-storages==1.11.1
 django-taggit==1.4.0
 djangorestframework==3.12.4
