--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Django==3.2
 django-allauth==0.44.0
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap-v5==1.0.2
+django-contrib-comments==2.1.0
 django-environ==0.4.5
 django-jsonview==2.0.0
 django-markdownx==3.0.1
