--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,11 @@ defusedxml==0.7.1
 distlib==0.3.1
 Django==3.2.2
 django-allauth==0.44.0
+django-auto-prefetch==0.0.6
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap-v5==1.0.2
 django-contrib-comments==2.1.0
+django-debug-toolbar==3.2.1
 django-environ==0.4.5
 django-jsonview==2.0.0
 django-markdownx==3.0.1
