--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
+rules==3.0
 Rx==1.6.1
 s3transfer==0.4.2
 singledispatch==3.6.1
