--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ django-simple-captcha==0.5.14
 django-simple-history==3.0.0
 django-storages==1.11.1
 django-taggit==1.4.0
+django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
 docutils==0.17.1
 drf-yasg==1.20.0
