--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-ranged-response==0.2.0
 django-robots==4.0
 django-simple-captcha==0.5.14
 django-simple-history==3.0.0
+django-sitetree==1.16.0
 django-storages==1.11.1
 django-taggit==1.4.0
 django-widget-tweaks==1.4.8
