--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ coreschema==0.0.4
 cryptography==3.4.7
 cssselect==1.1.0
 defusedxml==0.7.1
+diff-match-patch==20200713
 distlib==0.3.1
 Django==3.2.3
 django-allauth==0.44.0
@@ -21,6 +22,7 @@ django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap-v5==1.0.3
 django-contrib-comments==2.1.0
 django-environ==0.4.5
+django-import-export==2.5.0
 django-jsonview==2.0.0
 django-markdownx==3.0.1
 django-ranged-response==0.2.0
@@ -34,6 +36,7 @@ django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
 docutils==0.17.1
 drf-yasg==1.20.0
+et-xmlfile==1.1.0
 filelock==3.0.12
 graphene==2.1.8
 graphene-django==2.15.0
@@ -49,9 +52,12 @@ jmespath==0.10.0
 lxml==4.6.3
 Markdown==3.3.4
 markdown2==2.4.0
+MarkupPy==1.14
 MarkupSafe==1.1.1
 mysqlclient==2.0.3
 oauthlib==3.1.0
+odfpy==1.4.1
+openpyxl==3.0.7
 packaging==20.9
 Pillow==8.2.0
 promise==2.3
@@ -68,6 +74,7 @@ python-dateutil==2.8.1
 python-dotenv==0.17.0
 python3-openid==3.2.0
 pytz==2021.1
+PyYAML==5.4.1
 readtime==1.1.1
 requests==2.25.1
 requests-oauthlib==1.3.0
@@ -80,9 +87,12 @@ singledispatch==3.6.1
 six==1.15.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+tablib==3.0.0
 text-unidecode==1.3
 toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.26.4
 virtualenv==20.4.4
+xlrd==2.0.1
+xlwt==1.3.0
 zipp==3.4.1
