--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-bootstrap-v5==1.0.3
 django-compressor==2.4.1
 django-contrib-comments==2.1.0
 django-environ==0.4.5
+django-filter==2.4.0
 django-import-export==2.5.0
 django-jsonview==2.0.0
 django-markdownx==3.0.1
