--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 aniso8601==7.0.0
 appdirs==1.4.4
-asgiref==3.3.4
-autopep8==1.5.6
+asgiref==3.4.1
+autopep8==1.5.7
 beautifulsoup4==4.9.3
-boto3==1.17.57
-botocore==1.20.57
+boto3==1.18.1
+botocore==1.21.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+charset-normalizer==2.0.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.7
@@ -16,7 +17,7 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 distlib==0.3.1
 Django==3.2.5
-django-allauth==0.44.0
+django-allauth==0.45.0
 django-analytical==3.0.0
 django-appconf==1.0.4
 django-auto-prefetch==0.0.6
@@ -34,7 +35,7 @@ django-simple-captcha==0.5.14
 django-simple-history==3.0.0
 django-sitetree==1.16.0
 django-storages==1.11.1
-django-taggit==1.5.0
+django-taggit==1.5.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
 docutils==0.17.1
@@ -50,47 +51,47 @@ importlib-metadata==2.1.1
 Impostor==2.0.5
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==2.11.3
+Jinja2==3.0.1
 jmespath==0.10.0
 lxml==4.6.3
 Markdown==3.3.4
 markdown2==2.4.0
 MarkupPy==1.14
-MarkupSafe==1.1.1
+MarkupSafe==2.0.1
 mysqlclient==2.0.3
-oauthlib==3.1.0
+oauthlib==3.1.1
 odfpy==1.4.1
 openpyxl==3.0.7
 packaging==20.9
-Pillow==8.3.0
+Pillow==8.3.1
 pinax-referrals==4.0.1
 promise==2.3
 pycodestyle==2.7.0
 pycparser==2.20
 pyembed==1.3.3
 pyembed-markdown==1.1.0
-Pygments==2.8.1
+Pygments==2.9.0
 PyJWT==2.0.1
 pymdown-extensions==8.2
 pyparsing==2.4.7
 pyquery==1.4.3
-python-dateutil==2.8.1
-python-dotenv==0.17.0
+python-dateutil==2.8.2
+python-dotenv==0.18.0
 python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
 rcssmin==1.0.6
 readtime==1.1.1
-requests==2.25.1
+requests==2.26.0
 requests-oauthlib==1.3.0
 rjsmin==1.1.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 rules==3.0
 Rx==1.6.1
-s3transfer==0.4.2
-singledispatch==3.6.1
-six==1.15.0
+s3transfer==0.5.0
+singledispatch==3.6.2
+six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 tablib==3.0.0
