updated django and some packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,22 @@ aniso8601==7.0.0
 appdirs==1.4.4
 asgiref==3.4.1
 autopep8==1.5.7
+backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.9.3
-boto3==1.18.18
-botocore==1.21.18
+boto3==1.18.33
+botocore==1.21.33
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
 charset-normalizer==2.0.4
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==3.4.7
+cryptography==3.4.8
 cssselect==1.1.0
 defusedxml==0.7.1
 diff-match-patch==20200713
 distlib==0.3.2
-Django==3.2.6
+Django==3.2.7
 django-allauth==0.45.0
 django-analytical==3.0.0
 django-appconf==1.0.4
@@ -24,7 +25,8 @@ django-auto-prefetch==0.0.6
 django-bootstrap-v5==1.0.5
 django-compressor==2.4.1
 django-contrib-comments==2.1.0
-django-environ==0.4.5
+django-debug-toolbar==3.2.2
+django-environ==0.5.0
 django-filter==2.4.0
 django-import-export==2.5.0
 django-jsonview==2.0.0
@@ -55,7 +57,7 @@ Jinja2==3.0.1
 jmespath==0.10.0
 lxml==4.6.3
 Markdown==3.3.4
-markdown2==2.4.0
+markdown2==2.4.1
 MarkupPy==1.14
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
@@ -65,12 +67,13 @@ openpyxl==3.0.7
 packaging==21.0
 Pillow==8.3.1
 pinax-referrals==4.0.1
+platformdirs==2.3.0
 promise==2.3
 pycodestyle==2.7.0
 pycparser==2.20
 pyembed==1.3.3
 pyembed-markdown==1.1.0
-Pygments==2.9.0
+Pygments==2.10.0
 PyJWT==2.1.0
 pymdown-extensions==8.2
 pyparsing==2.4.7
@@ -85,12 +88,12 @@ readtime==1.1.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 rjsmin==1.1.0
-ruamel.yaml==0.17.10
+ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 rules==3.0
 Rx==1.6.1
 s3transfer==0.5.0
-singledispatch==3.6.2
+singledispatch==3.7.0
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
