--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.9.3
 boto3==1.18.33
 botocore==1.21.33
+cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
@@ -22,6 +23,7 @@ django-allauth==0.45.0
 django-analytical==3.0.0
 django-appconf==1.0.4
 django-auto-prefetch==0.0.6
+django-baton==2.2.2
 django-bootstrap-v5==1.0.5
 django-compressor==2.4.1
 django-contrib-comments==2.1.0
@@ -44,10 +46,16 @@ docutils==0.17.1
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
 filelock==3.0.12
+google-api-core==2.0.1
+google-api-python-client==2.19.1
+google-auth==2.0.2
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
 graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+httplib2==0.19.1
 idna==2.10
 importlib-metadata==2.1.1
 Impostor==2.0.5
@@ -69,6 +77,9 @@ Pillow==8.3.1
 pinax-referrals==4.0.1
 platformdirs==2.3.0
 promise==2.3
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.7.0
 pycparser==2.20
 pyembed==1.3.3
@@ -88,6 +99,7 @@ readtime==1.1.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 rjsmin==1.1.0
+rsa==4.7.2
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 rules==3.0
