--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-bootstrap-v5==1.0.5
 django-compressor==2.4.1
 django-contrib-comments==2.1.0
 django-debug-toolbar==3.2.2
+django-debug-toolbar-template-profiler==2.0.2
 django-environ==0.6.0
 django-filter==2.4.0
 django-import-export==2.5.0
@@ -104,6 +105,7 @@ toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.26.6
 virtualenv==20.7.2
+wrapt==1.12.1
 xlrd==2.0.1
 xlwt==1.3.0
 zipp==3.5.0
