will make a changelog later, but comments basically (and HUGE ASS bug fix)

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ AWS_STORAGE_BUCKET_NAME='MLG name'
 ALLOWED_HOSTS=CHANGE,THIS.com
 EMAIL_HOST_USER='example@email.com'
 EMAIL_HOST_PASSWORD='password_for_example_email'
+COMMENTS_DISABLED_GLOBALLY='A_BOOLEAN_VALUE'
