--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -7,7 +7,7 @@ enabled = true
 [[analyzers]]
 name = "python"
 enabled = true
-max_line_length
+max_line_length = 119
 
   [analyzers.meta]
   runtime_version = "3.x.x"
