updated auto-prefetch and other things

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-aniso8601==7.0.0
+aniso8601==8.1.1
 appdirs==1.4.4
 asgiref==3.4.1
 autopep8==1.5.7
 backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.10.0
+black==21.9b0
 bleach==4.1.0
-boto3==1.18.48
-botocore==1.21.48
+boto3==1.18.50
+botocore==1.21.50
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
 charset-normalizer==2.0.6
+click==8.0.1
+colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.8
@@ -24,7 +27,7 @@ django-activeurl==0.2.0
 django-allauth==0.45.0
 django-analytical==3.0.0
 django-appconf==1.0.5
-django-auto-prefetch==0.0.6
+django-auto-prefetch==0.1.1
 django-classy-tags==2.0.0
 django-comments-xtd==2.9.3
 django-compressor==2.4.1
@@ -50,11 +53,11 @@ djangorestframework==3.12.4
 docutils==0.17.1
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
-filelock==3.0.12
-graphene==2.1.9
-graphene-django==2.15.0
-graphql-core==2.3.2
-graphql-relay==2.0.1
+filelock==3.1.0
+graphene==3.0b7
+graphene-django==3.0.0b7
+graphql-core==3.1.6
+graphql-relay==3.1.0
 html5lib==1.1
 idna==2.10
 importlib-metadata==2.1.1
@@ -68,14 +71,16 @@ Markdown==3.3.4
 markdown2==2.4.1
 MarkupPy==1.14
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
 mysqlclient==2.0.3
 oauthlib==3.1.1
 odfpy==1.4.1
 openpyxl==3.0.9
 packaging==21.0
+pathspec==0.9.0
 Pillow==8.3.2
 pinax-referrals==4.0.1
-platformdirs==2.3.0
+platformdirs==2.4.0
 promise==2.3
 pycodestyle==2.7.0
 pycparser==2.20
@@ -113,11 +118,13 @@ taggit-selectize==2.10.0
 text-unidecode==1.3
 textile==4.0.1
 toml==0.10.2
+tomli==1.2.1
+typing-extensions==3.10.0.2
 uritemplate==3.0.1
 urllib3==1.26.7
-virtualenv==20.7.2
+virtualenv==20.8.1
 webencodings==0.5.1
 wrapt==1.12.1
 xlrd==2.0.1
 xlwt==1.3.0
-zipp==3.5.0
+zipp==3.5.1
