--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.10.0
 black==21.9b0
 bleach==4.1.0
-boto3==1.18.50
-botocore==1.21.50
-cachetools==4.2.2
+boto3==1.18.53
+botocore==1.21.53
+Brotli==1.0.9
+cachetools==4.2.4
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
@@ -17,7 +18,7 @@ click==8.0.1
 colorama==0.4.4
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==3.4.8
+cryptography==35.0.0
 cssselect==1.1.0
 defusedxml==0.7.1
 diff-match-patch==20200713
@@ -37,7 +38,7 @@ django-debug-toolbar-template-profiler==2.0.2
 django-editorjs-fields==0.2.3
 django-environ==0.7.0
 django-filter==21.1
-django-import-export==2.6.0
+django-import-export==2.6.1
 django-jsonview==2.0.0
 django-markdownx==3.0.1
 django-markup==1.5
@@ -53,7 +54,7 @@ djangorestframework==3.12.4
 docutils==0.17.1
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
-filelock==3.1.0
+filelock==3.3.0
 graphene==3.0b7
 graphene-django==3.0.0b7
 graphql-core==3.1.6
@@ -88,18 +89,18 @@ pyembed==1.3.3
 pyembed-markdown==1.1.0
 Pygments==2.10.0
 PyJWT==2.1.0
-pymdown-extensions==8.2
+pymdown-extensions==9.0
 pyparsing==2.4.7
 pyquery==1.4.3
 python-creole==1.4.10
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 python3-openid==3.2.0
-pytz==2021.1
+pytz==2021.3
 PyYAML==5.4.1
 rcssmin==1.0.6
 readtime==1.1.1
-regex==2021.9.24
+regex==2021.9.30
 requests==2.26.0
 requests-oauthlib==1.3.0
 rjsmin==1.1.0
@@ -124,7 +125,8 @@ uritemplate==3.0.1
 urllib3==1.26.7
 virtualenv==20.8.1
 webencodings==0.5.1
+whitenoise==5.3.0
 wrapt==1.12.1
 xlrd==2.0.1
 xlwt==1.3.0
-zipp==3.5.1
+zipp==3.6.0
