--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.10.0
 black==21.9b0
 bleach==4.1.0
-boto3==1.18.55
-botocore==1.21.55
+boto3==1.18.56
+botocore==1.21.56
 cachetools==4.2.4
 certifi==2021.5.30
 cffi==1.14.6
@@ -41,12 +41,13 @@ django-import-export==2.6.1
 django-jsonview==2.0.0
 django-markdownx==3.0.1
 django-markup==1.5
+django-project-version==0.15.1
 django-ranged-response==0.2.0
 django-robots==4.0
 django-simple-captcha==0.5.14
 django-simple-history==3.0.0
 django-sitetree==1.17.0
-django-storages==1.11.1
+django-storages==1.12
 django-taggit==1.5.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
@@ -54,6 +55,8 @@ docutils==0.17.1
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
 filelock==3.3.0
+gitdb==4.0.7
+GitPython==3.1.24
 graphene==3.0b7
 graphene-django==3.0.0b7
 graphql-core==3.1.6
@@ -87,7 +90,7 @@ pycparser==2.20
 pyembed==1.3.3
 pyembed-markdown==1.1.0
 Pygments==2.10.0
-PyJWT==2.1.0
+PyJWT==2.2.0
 pymdown-extensions==9.0
 pyparsing==2.4.7
 pyquery==1.4.3
@@ -111,6 +114,7 @@ s3transfer==0.5.0
 singledispatch==3.7.0
 six==1.16.0
 smartypants==2.0.1
+smmap==4.0.0
 soupsieve==2.2.1
 sqlparse==0.4.2
 tablib==3.0.0
