--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ ALLOWED_HOSTS=CHANGE,THIS.com
 EMAIL_HOST_USER='example@email.com'
 EMAIL_HOST_PASSWORD='password_for_example_email'
 COMMENTS_DISABLED_GLOBALLY='A_BOOLEAN_VALUE'
+ENABLE_TAILWIND='A_BOOLEAN_VALUE'
+NPM_BIN_PATH_WINDOWS='A_BOOLEAN_VALUE'
