--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 aniso8601==8.1.1
 appdirs==1.4.4
+arrow==1.2.0
 asgiref==3.4.1
 autopep8==1.5.7
 backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.10.0
+binaryornot==0.4.4
 black==21.9b0
 bleach==4.1.0
 boto3==1.18.58
@@ -15,6 +17,7 @@ chardet==4.0.0
 charset-normalizer==2.0.6
 click==8.0.2
 colorama==0.4.4
+cookiecutter==1.7.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.8
@@ -49,6 +52,7 @@ django-simple-history==3.0.0
 django-sitetree==1.17.0
 django-storages==1.12
 django-taggit==1.5.1
+django-tailwind==2.2.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.4
 docutils==0.17.1
@@ -68,6 +72,7 @@ Impostor==2.0.5
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.2
+jinja2-time==0.2.0
 jmespath==0.10.0
 lxml==4.6.3
 Markdown==3.3.4
@@ -84,6 +89,7 @@ pathspec==0.9.0
 Pillow==8.3.2
 pinax-referrals==4.0.1
 platformdirs==2.4.0
+poyo==0.5.0
 promise==2.3
 pycodestyle==2.7.0
 pycparser==2.20
@@ -97,6 +103,7 @@ pyquery==1.4.3
 python-creole==1.4.10
 python-dateutil==2.8.2
 python-dotenv==0.19.1
+python-slugify==5.0.2
 python3-openid==3.2.0
 pytz==2021.3
 PyYAML==5.4.1
