--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ beautifulsoup4==4.10.0
 binaryornot==0.4.4
 black==21.9b0
 bleach==4.1.0
-boto3==1.20.4
-botocore==1.23.4
+boto3==1.20.7
+botocore==1.23.7
 cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
@@ -27,7 +27,7 @@ diff-match-patch==20200713
 distlib==0.3.3
 Django==3.2.9
 django-activeurl==0.2.0
-django-allauth==0.45.0
+django-allauth==0.46.0
 django-analytical==3.0.0
 django-appconf==1.0.5
 django-auto-prefetch==1.0.0
@@ -51,23 +51,23 @@ django-simple-captcha==0.5.14
 django-simple-history==3.0.0
 django-sitetree==1.17.0
 django-storages==1.12.3
-django-taggit==1.5.1
+django-taggit==2.0.0
 django-tailwind==2.2.2
 django-widget-tweaks==1.4.9
 djangorestframework==3.12.4
 docutils==0.18
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
-filelock==3.3.2
+filelock==3.4.0
 gitdb==4.0.9
 GitPython==3.1.24
-graphene==3.0b7
+graphene==3.0
 graphene-django==3.0.0b7
 graphql-core==3.1.6
 graphql-relay==3.1.0
 html5lib==1.1
 idna==2.10
-importlib-metadata==2.1.1
+importlib-metadata==4.8.2
 Impostor==2.0.5
 inflection==0.5.1
 itypes==1.2.0
@@ -75,7 +75,7 @@ Jinja2==3.0.3
 jinja2-time==0.2.0
 jmespath==0.10.0
 lxml==4.6.4
-Markdown==3.3.4
+Markdown==3.3.5
 markdown2==2.4.1
 MarkupPy==1.14
 MarkupSafe==2.0.1
@@ -97,7 +97,7 @@ pyembed==1.3.3
 pyembed-markdown==1.1.0
 Pygments==2.10.0
 PyJWT==2.3.0
-pymdown-extensions==9.0
+pymdown-extensions==9.1
 pyparsing==2.4.7
 pyquery==1.4.3
 python-creole==1.4.10
