--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,16 @@ beautifulsoup4==4.10.0
 binaryornot==0.4.4
 black==21.9b0
 bleach==4.1.0
-boto3==1.20.10
-botocore==1.23.10
+boto3==1.20.17
+botocore==1.23.17
 cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
-charset-normalizer==2.0.7
+charset-normalizer==2.0.8
 click==8.0.3
 colorama==0.4.4
+commonmark==0.9.1
 cookiecutter==1.7.3
 coreapi==2.3.3
 coreschema==0.0.4
@@ -32,6 +33,7 @@ django-analytical==3.0.0
 django-appconf==1.0.5
 django-auto-prefetch==1.0.0
 django-classy-tags==2.0.0
+django-codemod==1.6.5
 django-comments-xtd==2.9.4
 django-compressor==2.4.1
 django-contrib-comments==2.1.0
@@ -55,7 +57,7 @@ django-taggit==2.0.0
 django-tailwind==2.2.2
 django-widget-tweaks==1.4.9
 djangorestframework==3.12.4
-docutils==0.18
+docutils==0.18.1
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
 filelock==3.4.0
@@ -74,6 +76,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 jinja2-time==0.2.0
 jmespath==0.10.0
+libcst==0.3.23
 lxml==4.6.4
 Markdown==3.3.6
 markdown2==2.4.1
@@ -112,6 +115,7 @@ readtime==1.1.1
 regex==2021.11.10
 requests==2.26.0
 requests-oauthlib==1.3.0
+rich==10.15.1
 rjsmin==1.1.0
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.6
@@ -127,10 +131,12 @@ sqlparse==0.4.2
 tablib==3.1.0
 taggit-selectize==2.11.0
 text-unidecode==1.3
-textile==4.0.1
+textile==4.0.2
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+typing-inspect==0.7.1
+tzdata==2021.5
 uritemplate==3.0.1
 urllib3==1.26.7
 virtualenv==20.10.0
