--- a/requirements.txt
+++ b/requirements.txt
@@ -28,12 +28,14 @@ diff-match-patch==20200713
 distlib==0.3.3
 Django==3.2.10
 django-activeurl==0.2.0
+django-admin-interface==0.18.3
 django-allauth==0.46.0
 django-analytical==3.0.0
 django-appconf==1.0.5
 django-auto-prefetch==1.0.0
 django-classy-tags==2.0.0
 django-codemod==1.6.5
+django-colorfield==0.5.0
 django-comments-xtd==2.9.4
 django-compressor==2.4.1
 django-contrib-comments==2.1.0
@@ -44,6 +46,7 @@ django-environ==0.8.1
 django-filter==21.1
 django-import-export==2.6.1
 django-jsonview==2.0.0
+django-markdown2==0.3.1
 django-markdownx==3.0.1
 django-markup==1.5
 django-project-version==0.16.0
