--- a/khoBlog/static/khoBlog/manifest.json
+++ b/khoBlog/static/khoBlog/manifest.json
@@ -18,7 +18,7 @@
       "src": "img/maskable_icon_x512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
   "start_url": "/?source=pwa",
