--- a/theme/static_src/package.json
+++ b/theme/static_src/package.json
@@ -26,6 +26,7 @@
     "postcss-nested": "^5.0.6",
     "postcss-simple-vars": "^6.0.3",
     "rimraf": "^3.0.2",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.3"
   },
   "dependencies": {
