--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ EMAIL_HOST_USER='example@email.com'
 EMAIL_HOST_PASSWORD='password_for_example_email'
 COMMENTS_DISABLED_GLOBALLY='A_BOOLEAN_VALUE'
 NPM_BIN_PATH_WINDOWS='A_BOOLEAN_VALUE'
+HIDE_WEDNESDAY='True'
