--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,15 @@
 #
 asgiref==3.6.0
     # via django
-beautifulsoup4==4.11.1
-    # via
-    #   pyembed
-    #   readtime
-black==22.12.0
+beautifulsoup4==4.11.2
+    # via readtime
+black==23.1.0
     # via -r requirements.in
 bleach==6.0.0
     # via -r requirements.in
-boto3==1.26.59
+boto3==1.26.71
     # via -r requirements.in
-botocore==1.29.59
+botocore==1.29.71
     # via
     #   boto3
     #   s3transfer
@@ -36,7 +34,7 @@ coreschema==0.0.4
     # via
     #   coreapi
     #   drf-yasg
-cryptography==39.0.0
+cryptography==39.0.1
     # via pyjwt
 cssselect==1.2.0
     # via pyquery
@@ -46,7 +44,7 @@ defusedxml==0.7.1
     #   python3-openid
 diff-match-patch==20200713
     # via django-import-export
-django==4.1.5
+django==4.1.7
     # via
     #   -r requirements.in
     #   django-admin-index
@@ -129,7 +127,7 @@ djangorestframework==3.14.0
     #   drf-yasg
 docutils==0.19
     # via django-comments-xtd
-drf-yasg==1.21.4
+drf-yasg==1.21.5
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
@@ -153,18 +151,17 @@ jmespath==1.0.1
     #   botocore
 lxml==4.9.2
     # via pyquery
-markdown==3.3.7
+markdown==3.4.1
     # via
     #   django-markdownx
-    #   pyembed-markdown
     #   pymdown-extensions
-markdown2==2.4.7
+markdown2==2.4.8
     # via readtime
 markuppy==1.14
     # via tablib
 markupsafe==2.1.2
     # via jinja2
-mypy-extensions==0.4.3
+mypy-extensions==1.0.0
     # via black
 mysqlclient==2.1.1
     # via -r requirements.in
@@ -172,10 +169,12 @@ oauthlib==3.2.2
     # via requests-oauthlib
 odfpy==1.4.1
     # via tablib
-openpyxl==3.0.10
+openpyxl==3.1.1
     # via tablib
 packaging==23.0
-    # via drf-yasg
+    # via
+    #   black
+    #   drf-yasg
 pathspec==0.11.0
     # via black
 pillow==9.4.0
@@ -183,14 +182,10 @@ pillow==9.4.0
     #   django-colorfield
     #   django-markdownx
     #   django-simple-captcha
-platformdirs==2.6.2
+platformdirs==3.0.0
     # via black
 pycparser==2.21
     # via cffi
-pyembed==1.3.3
-    # via pyembed-markdown
-pyembed-markdown==1.1.0
-    # via -r requirements.in
 pygments==2.14.0
     # via -r requirements.in
 pyjwt[crypto]==2.6.0
@@ -219,7 +214,6 @@ requests==2.28.2
     # via
     #   coreapi
     #   django-allauth
-    #   pyembed
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via django-allauth
@@ -238,7 +232,7 @@ six==1.16.0
     #   bleach
     #   django-comments-xtd
     #   python-dateutil
-soupsieve==2.3.2.post1
+soupsieve==2.4
     # via beautifulsoup4
 sqlparse==0.4.3
     # via django
@@ -264,5 +258,5 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
-zipp==3.12.0
+zipp==3.13.0
     # via importlib-metadata
