--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ black==23.1.0
     # via -r requirements.in
 bleach==6.0.0
     # via -r requirements.in
-boto3==1.26.82
+boto3==1.26.87
     # via -r requirements.in
-botocore==1.29.82
+botocore==1.29.87
     # via
     #   boto3
     #   s3transfer
@@ -22,7 +22,7 @@ certifi==2022.12.7
     # via requests
 cffi==1.15.1
     # via cryptography
-charset-normalizer==3.0.1
+charset-normalizer==3.1.0
     # via requests
 click==8.1.3
     # via black
@@ -34,7 +34,7 @@ coreschema==0.0.4
     # via
     #   coreapi
     #   drf-yasg
-cryptography==39.0.1
+cryptography==39.0.2
     # via pyjwt
 cssselect==1.2.0
     # via pyquery
@@ -91,7 +91,7 @@ django-compressor==4.3.1
     # via -r requirements.in
 django-contrib-comments==2.2.0
     # via django-comments-xtd
-django-environ==0.9.0
+django-environ==0.10.0
     # via -r requirements.in
 django-filter==22.1
     # via -r requirements.in
@@ -103,7 +103,7 @@ django-markdownx==4.0.0b1
     # via -r requirements.in
 django-markup==1.6
     # via -r requirements.in
-django-ordered-model==3.6
+django-ordered-model==3.7.1
     # via django-admin-index
 django-ranged-response==0.2.0
     # via django-simple-captcha
@@ -182,7 +182,7 @@ pillow==9.4.0
     #   django-colorfield
     #   django-markdownx
     #   django-simple-captcha
-platformdirs==3.0.0
+platformdirs==3.1.0
     # via black
 pycparser==2.21
     # via cffi
@@ -190,7 +190,7 @@ pygments==2.14.0
     # via -r requirements.in
 pyjwt[crypto]==2.6.0
     # via django-allauth
-pymdown-extensions==9.9.2
+pymdown-extensions==9.10
     # via -r requirements.in
 pyquery==2.0.0
     # via readtime
@@ -205,7 +205,9 @@ pytz==2022.7.1
     #   djangorestframework
     #   drf-yasg
 pyyaml==6.0
-    # via tablib
+    # via
+    #   pymdown-extensions
+    #   tablib
 rcssmin==1.1.1
     # via django-compressor
 readtime==2.0.0
@@ -254,5 +256,5 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
-zipp==3.13.0
+zipp==3.15.0
     # via importlib-metadata
