--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ black==23.3.0
     # via -r requirements.in
 bleach==6.0.0
     # via -r requirements.in
-boto3==1.26.109
+boto3==1.26.118
     # via -r requirements.in
-botocore==1.29.109
+botocore==1.29.118
     # via
     #   boto3
     #   s3transfer
@@ -34,7 +34,7 @@ coreschema==0.0.4
     # via
     #   coreapi
     #   drf-yasg
-cryptography==40.0.1
+cryptography==40.0.2
     # via pyjwt
 cssselect==1.2.0
     # via pyquery
@@ -69,7 +69,7 @@ django==4.1.7
     #   impostor
 django-admin-index==2.0.2
     # via -r requirements.in
-django-admin-interface==0.24.2
+django-admin-interface==0.25.0
     # via -r requirements.in
 django-allauth==0.54.0
     # via -r requirements.in
@@ -79,7 +79,7 @@ django-appconf==1.0.5
     # via django-compressor
 django-auto-prefetch==1.5.1
     # via -r requirements.in
-django-browser-reload==1.7.0
+django-browser-reload==1.8.0
     # via
     #   -r requirements.in
     #   django-tailwind
@@ -95,7 +95,7 @@ django-environ==0.10.0
     # via -r requirements.in
 django-filter==23.1
     # via -r requirements.in
-django-import-export==3.1.0
+django-import-export==3.2.0
     # via -r requirements.in
 django-jsonview==2.0.0
     # via -r requirements.in
@@ -135,7 +135,7 @@ heroicons[django]==2.2.0
     # via -r requirements.in
 idna==3.4
     # via requests
-importlib-metadata==6.2.0
+importlib-metadata==6.5.1
     # via -r requirements.in
 impostor==3.0.0
     # via -r requirements.in
@@ -171,7 +171,7 @@ odfpy==1.4.1
     # via tablib
 openpyxl==3.1.2
     # via tablib
-packaging==23.0
+packaging==23.1
     # via
     #   black
     #   drf-yasg
@@ -186,7 +186,7 @@ platformdirs==3.2.0
     # via black
 pycparser==2.21
     # via cffi
-pygments==2.14.0
+pygments==2.15.1
     # via -r requirements.in
 pyjwt[crypto]==2.6.0
     # via django-allauth
@@ -198,6 +198,8 @@ python-dateutil==2.8.2
     # via botocore
 python-dotenv==1.0.0
     # via -r requirements.in
+python-slugify==8.0.1
+    # via django-admin-interface
 python3-openid==3.2.0
     # via django-allauth
 pytz==2023.3
@@ -234,14 +236,16 @@ six==1.16.0
     #   bleach
     #   django-comments-xtd
     #   python-dateutil
-soupsieve==2.4
+soupsieve==2.4.1
     # via beautifulsoup4
-sqlparse==0.4.3
+sqlparse==0.4.4
     # via django
 tablib[html,ods,xls,xlsx,yaml]==3.4.0
     # via django-import-export
 taggit-selectize==2.11.0
     # via -r requirements.in
+text-unidecode==1.3
+    # via python-slugify
 tomli==2.0.1
     # via black
 tzdata==2023.3
