--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ black==23.3.0
     # via -r requirements.in
 bleach==6.0.0
     # via -r requirements.in
-boto3==1.26.155
+boto3==1.26.160
     # via -r requirements.in
-botocore==1.29.155
+botocore==1.29.160
     # via
     #   boto3
     #   s3transfer
@@ -74,9 +74,7 @@ django-appconf==1.0.5
 django-auto-prefetch==1.6.0
     # via -r requirements.in
 django-browser-reload==1.10.0
-    # via
-    #   -r requirements.in
-    #   django-tailwind
+    # via -r requirements.in
 django-colorfield==0.9.0
     # via django-admin-interface
 django-comments-xtd==2.9.9
@@ -111,7 +109,7 @@ django-storages==1.13.2
     # via -r requirements.in
 django-taggit==4.0.0
     # via -r requirements.in
-django-tailwind==3.5.0
+django-tailwind==3.6.0
     # via -r requirements.in
 django-widget-tweaks==1.4.12
     # via -r requirements.in
@@ -129,7 +127,7 @@ heroicons[django]==2.3.0
     # via -r requirements.in
 idna==3.4
     # via requests
-importlib-metadata==6.6.0
+importlib-metadata==6.7.0
     # via -r requirements.in
 impostor==3.0.0
     # via -r requirements.in
@@ -145,13 +143,13 @@ markdown==3.4.3
     # via
     #   django-markdownx
     #   pymdown-extensions
-markdown2==2.4.8
+markdown2==2.4.9
     # via readtime
 markuppy==1.14
     # via tablib
 mypy-extensions==1.0.0
     # via black
-mysqlclient==2.1.1
+mysqlclient==2.2.0
     # via -r requirements.in
 oauthlib==3.2.2
     # via requests-oauthlib
@@ -170,7 +168,7 @@ pillow==9.5.0
     #   django-colorfield
     #   django-markdownx
     #   django-simple-captcha
-platformdirs==3.5.3
+platformdirs==3.8.0
     # via black
 pycparser==2.21
     # via cffi
