--- a/requirements.txt
+++ b/requirements.txt
@@ -4,43 +4,31 @@
 #
 #    pip-compile
 #
-asgiref==3.7.2
+asgiref==3.8.1
     # via
     #   django
     #   django-browser-reload
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.3
     # via readtime
-black==23.12.1
+black==24.4.2
     # via -r requirements.in
 bleach==6.1.0
     # via -r requirements.in
-boto3==1.34.19
+boto3==1.34.140
     # via -r requirements.in
-botocore==1.34.19
+botocore==1.34.140
     # via
     #   boto3
     #   s3transfer
-certifi==2023.11.17
-    # via requests
-cffi==1.16.0
-    # via cryptography
-charset-normalizer==3.3.2
-    # via requests
 click==8.1.7
     # via black
 colorama==0.4.6
     # via click
-cryptography==41.0.7
-    # via pyjwt
 cssselect==1.2.0
     # via pyquery
-defusedxml==0.7.1
-    # via
-    #   odfpy
-    #   python3-openid
 diff-match-patch==20230430
     # via django-import-export
-django==5.0.1
+django==5.0.6
     # via
     #   -r requirements.in
     #   django-admin-index
@@ -49,6 +37,7 @@ django==5.0.1
     #   django-auto-prefetch
     #   django-browser-reload
     #   django-comments-xtd
+    #   django-compressor
     #   django-contrib-comments
     #   django-filter
     #   django-import-export
@@ -56,6 +45,7 @@ django==5.0.1
     #   django-markup
     #   django-ranged-response
     #   django-simple-captcha
+    #   django-simple-history
     #   django-storages
     #   django-taggit
     #   django-tailwind
@@ -63,33 +53,33 @@ django==5.0.1
     #   drf-yasg
     #   heroicons
     #   impostor
-django-admin-index==3.1.0
+django-admin-index==3.1.1
     # via -r requirements.in
-django-admin-interface==0.28.3
+django-admin-interface==0.28.8
     # via -r requirements.in
-django-allauth==0.60.0
+django-allauth==0.63.3
     # via -r requirements.in
 django-analytical==3.1.0
     # via -r requirements.in
 django-appconf==1.0.6
     # via django-compressor
-django-auto-prefetch==1.8.0
+django-auto-prefetch==1.9.0
     # via -r requirements.in
-django-browser-reload==1.12.1
+django-browser-reload==1.13.0
     # via -r requirements.in
 django-colorfield==0.11.0
     # via django-admin-interface
-django-comments-xtd==2.9.13
+django-comments-xtd==2.10.0
     # via -r requirements.in
-django-compressor==4.4
+django-compressor==4.5
     # via -r requirements.in
 django-contrib-comments==2.2.0
     # via django-comments-xtd
 django-environ==0.11.2
     # via -r requirements.in
-django-filter==23.5
+django-filter==24.2
     # via -r requirements.in
-django-import-export==3.3.6
+django-import-export==4.1.0
     # via -r requirements.in
 django-jsonview==2.0.0
     # via -r requirements.in
@@ -105,9 +95,9 @@ django-robots==6.1
     # via -r requirements.in
 django-simple-captcha==0.6.0
     # via -r requirements.in
-django-simple-history==3.4.0
+django-simple-history==3.7.0
     # via -r requirements.in
-django-storages==1.14.2
+django-storages==1.14.3
     # via -r requirements.in
 django-taggit==5.0.1
     # via -r requirements.in
@@ -115,21 +105,17 @@ django-tailwind==3.8.0
     # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
-djangorestframework==3.14.0
+djangorestframework==3.15.2
     # via
     #   django-comments-xtd
     #   drf-yasg
-docutils==0.20.1
+docutils==0.21.2
     # via django-comments-xtd
 drf-yasg==1.21.7
     # via -r requirements.in
-et-xmlfile==1.1.0
-    # via openpyxl
 heroicons[django]==2.6.0
     # via -r requirements.in
-idna==3.6
-    # via requests
-importlib-metadata==7.0.1
+importlib-metadata==8.0.0
     # via -r requirements.in
 impostor==3.1.0
     # via -r requirements.in
@@ -139,84 +125,60 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-lxml==5.1.0
+lxml==5.2.2
     # via pyquery
-markdown==3.5.2
+markdown==3.6
     # via
     #   django-markdownx
     #   pymdown-extensions
-markdown2==2.4.12
+markdown2==2.4.13
     # via readtime
-markuppy==1.14
-    # via tablib
 mypy-extensions==1.0.0
     # via black
-mysqlclient==2.2.1
+mysqlclient==2.2.4
     # via -r requirements.in
-oauthlib==3.2.2
-    # via requests-oauthlib
-odfpy==1.4.1
-    # via tablib
-openpyxl==3.1.2
-    # via tablib
-packaging==23.2
+packaging==24.1
     # via
     #   black
     #   drf-yasg
 pathspec==0.12.1
     # via black
-pillow==10.2.0
+pillow==10.4.0
     # via
     #   django-colorfield
     #   django-markdownx
     #   django-simple-captcha
-platformdirs==4.1.0
+platformdirs==4.2.2
     # via black
-pycparser==2.21
-    # via cffi
-pygments==2.17.2
+pygments==2.18.0
     # via -r requirements.in
-pyjwt[crypto]==2.8.0
-    # via
-    #   django-allauth
-    #   pyjwt
-pymdown-extensions==10.7
+pymdown-extensions==10.8.1
     # via -r requirements.in
 pyquery==2.0.0
     # via readtime
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via botocore
-python-dotenv==1.0.0
+python-dotenv==1.0.1
     # via -r requirements.in
-python-slugify==8.0.1
+python-slugify==8.0.4
     # via django-admin-interface
-python3-openid==3.2.0
-    # via django-allauth
-pytz==2023.3.post1
+pytz==2024.1
     # via
     #   django-comments-xtd
-    #   djangorestframework
     #   drf-yasg
 pyyaml==6.0.1
     # via
     #   drf-yasg
     #   pymdown-extensions
-    #   tablib
-rcssmin==1.1.1
+rcssmin==1.1.2
     # via django-compressor
 readtime==3.0.0
     # via -r requirements.in
-requests==2.31.0
-    # via
-    #   django-allauth
-    #   requests-oauthlib
-requests-oauthlib==1.3.1
-    # via django-allauth
-rjsmin==1.2.1
+rjsmin==1.2.2
     # via django-compressor
-rules==3.3
+rules==3.4
     # via -r requirements.in
-s3transfer==0.10.0
+s3transfer==0.10.2
     # via boto3
 six==1.16.0
     # via
@@ -225,35 +187,27 @@ six==1.16.0
     #   python-dateutil
 soupsieve==2.5
     # via beautifulsoup4
-sqlparse==0.4.4
+sqlparse==0.5.0
     # via django
-tablib[html,ods,xls,xlsx,yaml]==3.5.0
-    # via
-    #   django-import-export
-    #   tablib
+tablib==3.5.0
+    # via django-import-export
 taggit-selectize==2.11.0
     # via -r requirements.in
 text-unidecode==1.3
     # via python-slugify
 tomli==2.0.1
     # via black
-typing-extensions==4.9.0
+typing-extensions==4.12.2
     # via
     #   asgiref
     #   black
-tzdata==2023.4
+tzdata==2024.1
     # via django
 uritemplate==4.1.1
     # via drf-yasg
-urllib3==2.0.7
-    # via
-    #   botocore
-    #   requests
+urllib3==2.2.2
+    # via botocore
 webencodings==0.5.1
     # via bleach
-xlrd==2.0.1
-    # via tablib
-xlwt==1.3.0
-    # via tablib
-zipp==3.17.0
+zipp==3.19.2
     # via importlib-metadata
